Bug 247514 - accountwizard crashes with wrong credentials
Summary: accountwizard crashes with wrong credentials
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Account Wizard (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR major
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 240182 250754 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-12 14:53 UTC by Bjoern Ricks
Modified: 2010-09-21 09:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Desktop Backtrace (36.81 KB, application/octet-stream)
2010-08-17 17:59 UTC, Andre Heinecke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bjoern Ricks 2010-08-12 14:53:05 UTC
Application: accountwizard (0.1)
KDE Platform Version: 4.5.00 (KDE 4.5.0) (Compiled from sources)
Qt Version: 4.6.3
Operating System: Linux 2.6.32-5-686 i686
Distribution: Debian GNU/Linux testing (squeeze)

-- Information about the crash:
- What I was doing when the application crashed:
Tried to set up a new kolab account with wron password. While going back in the accountwizard it crashed. This issue is always reproducable.

- Custom settings of the application:
Inserted wrong passwort into password field

The crash can be reproduced every time.

-- Backtrace:
Application: Konten-Assistent (accountwizard), signal: Aborted
[Current thread is 1 (Thread 0xb4d39710 (LWP 6125))]

Thread 4 (Thread 0xb1cffb70 (LWP 6130)):
#0  0xb7806424 in __kernel_vsyscall ()
#1  0xb5c25413 in ?? () from /lib/i686/cmov/libc.so.6
#2  0xb5bbd427 in ?? () from /lib/i686/cmov/libc.so.6
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 3 (Thread 0xae8b5b70 (LWP 6134)):
#0  0xb7806424 in __kernel_vsyscall ()
#1  0xb5654482 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i686/cmov/libpthread.so.0
#2  0xb5c25114 in pthread_cond_timedwait () from /lib/i686/cmov/libc.so.6
#3  0xb5e16f2f in QWaitConditionPrivate::wait (this=0x85bf354, mutex=0x85bf350, time=30000) at thread/qwaitcondition_unix.cpp:85
#4  QWaitCondition::wait (this=0x85bf354, mutex=0x85bf350, time=30000) at thread/qwaitcondition_unix.cpp:159
#5  0xb5e0af5b in QThreadPoolThread::run (this=0x85a9338) at concurrent/qthreadpool.cpp:140
#6  0xb5e15fae in QThreadPrivate::start (arg=0x85a9338) at thread/qthread_unix.cpp:248
#7  0xb564f955 in start_thread () from /lib/i686/cmov/libpthread.so.0
#8  0xb5c1810e in clone () from /lib/i686/cmov/libc.so.6

Thread 2 (Thread 0xae0b4b70 (LWP 6135)):
#0  0xb7806424 in __kernel_vsyscall ()
#1  0xb5654482 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i686/cmov/libpthread.so.0
#2  0xb5c25114 in pthread_cond_timedwait () from /lib/i686/cmov/libc.so.6
#3  0xb5e16f2f in QWaitConditionPrivate::wait (this=0x85bf354, mutex=0x85bf350, time=30000) at thread/qwaitcondition_unix.cpp:85
#4  QWaitCondition::wait (this=0x85bf354, mutex=0x85bf350, time=30000) at thread/qwaitcondition_unix.cpp:159
#5  0xb5e0af5b in QThreadPoolThread::run (this=0xb1d05050) at concurrent/qthreadpool.cpp:140
#6  0xb5e15fae in QThreadPrivate::start (arg=0xb1d05050) at thread/qthread_unix.cpp:248
#7  0xb564f955 in start_thread () from /lib/i686/cmov/libpthread.so.0
#8  0xb5c1810e in clone () from /lib/i686/cmov/libc.so.6

Thread 1 (Thread 0xb4d39710 (LWP 6125)):
[KCrash Handler]
#7  0xb7806424 in __kernel_vsyscall ()
#8  0xb5b76751 in raise () from /lib/i686/cmov/libc.so.6
#9  0xb5b79b82 in abort () from /lib/i686/cmov/libc.so.6
#10 0xb5bad22d in ?? () from /lib/i686/cmov/libc.so.6
#11 0xb5bb7321 in ?? () from /lib/i686/cmov/libc.so.6
#12 0xb5bb8b78 in ?? () from /lib/i686/cmov/libc.so.6
#13 0xb5bbbc5d in free () from /lib/i686/cmov/libc.so.6
#14 0xb5d6c701 in operator delete(void*) () from /usr/lib/libstdc++.so.6
#15 0xb1222bb9 in Pointer<QObject>::cleanup (this=0x0) at ../../../kjsembed/kjsembed/pointer.h:56
#16 0xb121aa5b in ~ObjectBinding (this=0xb1e10100, __in_chrg=<value optimized out>) at ../../../kjsembed/kjsembed/object_binding.cpp:39
#17 0xb1225d5e in ~QObjectBinding (this=0xb1e10100, __in_chrg=<value optimized out>) at ../../../kjsembed/kjsembed/qobject_binding.cpp:274
#18 0xb1231cb8 in ~QWidgetBinding (this=0xb1e10100, __in_chrg=<value optimized out>) at ../../../kjsembed/kjsembed/qwidget_binding.h:32
#19 0xb1320ad4 in KJS::Collector::collect () at ../../kjs/collector.cpp:795
#20 0xb1320ee6 in KJS::Collector::allocate (s=28) at ../../kjs/collector.cpp:331
#21 0xb1351cad in KJS::JSCell::operator new (size=28) at ../../kjs/value.cpp:41
#22 0xb1215e8d in KJSEmbed::StaticBinding::publish (exec=0x8471430, object=0xb1e11b80, methods=0xb12fb160) at ../../../kjsembed/kjsembed/static_binding.cpp:65
#23 0xb122eef4 in QWidgetBinding (this=0xb1e11b80, exec=0x8471430, obj=0x8427838) at ../../../kjsembed/kjsembed/qwidget_binding.cpp:142
#24 0xb122ef89 in KJSEmbed::QWidgetBinding::bindMethod (exec=0x8471430, ptrObj=...) at ../../../kjsembed/kjsembed/qwidget_binding.cpp:143
#25 0xb12158dd in KJSEmbed::StaticConstructor::bind (exec=0x8471430, className=..., objPtr=...) at ../../../kjsembed/kjsembed/static_binding.cpp:135
#26 0xb12267a8 in KJSEmbed::createQObject (exec=0x8471430, value=0x8427838, owner=KJSEmbed::ObjectBinding::JSOwned) at ../../../kjsembed/kjsembed/qobject_binding.cpp:764
#27 0xb1226b2b in KJSEmbed::QObjectBinding::publishQObject (exec=0x8471430, target=0xb1e11ac0, object=0x84265f0) at ../../../kjsembed/kjsembed/qobject_binding.cpp:191
#28 0xb1227259 in QObjectBinding (this=0xb1e11ac0, exec=0x8471430, object=0x84265f0) at ../../../kjsembed/kjsembed/qobject_binding.cpp:247
#29 0xb122eed3 in QWidgetBinding (this=0xb1e11ac0, exec=0x8471430, obj=0x84265f0) at ../../../kjsembed/kjsembed/qwidget_binding.cpp:142
#30 0xb122ef89 in KJSEmbed::QWidgetBinding::bindMethod (exec=0x8471430, ptrObj=...) at ../../../kjsembed/kjsembed/qwidget_binding.cpp:143
#31 0xb12158dd in KJSEmbed::StaticConstructor::bind (exec=0x8471430, className=..., objPtr=...) at ../../../kjsembed/kjsembed/static_binding.cpp:135
#32 0xb12267a8 in KJSEmbed::createQObject (exec=0x8471430, value=0x84265f0, owner=KJSEmbed::ObjectBinding::JSOwned) at ../../../kjsembed/kjsembed/qobject_binding.cpp:764
#33 0xb1226b2b in KJSEmbed::QObjectBinding::publishQObject (exec=0x8471430, target=0xb1e11a40, object=0xbf907d7c) at ../../../kjsembed/kjsembed/qobject_binding.cpp:191
#34 0xb1227259 in QObjectBinding (this=0xb1e11a40, exec=0x8471430, object=0xbf907d7c) at ../../../kjsembed/kjsembed/qobject_binding.cpp:247
#35 0xb122eed3 in QWidgetBinding (this=0xb1e11a40, exec=0x8471430, obj=0xbf907d7c) at ../../../kjsembed/kjsembed/qwidget_binding.cpp:142
#36 0xb122ef89 in KJSEmbed::QWidgetBinding::bindMethod (exec=0x8471430, ptrObj=...) at ../../../kjsembed/kjsembed/qwidget_binding.cpp:143
#37 0xb12158dd in KJSEmbed::StaticConstructor::bind (exec=0x8471430, className=..., objPtr=...) at ../../../kjsembed/kjsembed/static_binding.cpp:135
#38 0xb12267a8 in KJSEmbed::createQObject (exec=0x8471430, value=0xbf907d7c, owner=KJSEmbed::ObjectBinding::CPPOwned) at ../../../kjsembed/kjsembed/qobject_binding.cpp:764
#39 0xb122da4a in KJSEmbed::Engine::addObject (this=0x846f158, obj=0xbf907d7c, parent=0xae9d8f20, name=...) at ../../../kjsembed/kjsembed/kjsembed.cpp:183
#40 0xb122dbb1 in KJSEmbed::Engine::addObject (this=0x846f158, obj=0xbf907d7c, name=...) at ../../../kjsembed/kjsembed/kjsembed.cpp:192
#41 0xb1edaa3c in Kross::KjsScriptPrivate::publishObject (this=0x846b090) at ../../../kross/kjs/kjsscript.cpp:130
#42 Kross::KjsScript::initialize (this=0x846b090) at ../../../kross/kjs/kjsscript.cpp:212
#43 0xb1edb162 in Kross::KjsScript::execute (this=0x846b090) at ../../../kross/kjs/kjsscript.cpp:274
#44 0xb75876e0 in Kross::Action::slotTriggered (this=0x82e7860) at ../../../kross/core/action.cpp:528
#45 0xb7587a3b in Kross::Action::qt_metacall (this=0x82e7860, _c=QMetaObject::InvokeMetaMethod, _id=32, _a=0xbf906628) at ./action.moc:186
#46 0xb5f1780a in QMetaObject::metacall (object=0x82e7860, cl=6125, idx=51, argv=0xbf906628) at kernel/qmetaobject.cpp:237
#47 0xb5f261db in QMetaObject::activate (sender=0x82e7860, m=0xb6f37a38, local_signal_index=1, argv=0xbf906628) at kernel/qobject.cpp:3295
#48 0xb6609cc9 in QAction::triggered (this=0x82e7860, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#49 0xb660bebc in QAction::activate (this=0x82e7860, event=QAction::Trigger) at kernel/qaction.cpp:1255
#50 0x0807dedc in QAction::trigger (this=0x83c8b98) at /usr/include/qt4/QtGui/qaction.h:218
#51 LoadPage::enterPageNext (this=0x83c8b98) at ../../../runtime/accountwizard/loadpage.cpp:61
#52 0x08077117 in Dialog::slotNextOk (this=0xbf907d7c) at ../../../runtime/accountwizard/dialog.cpp:115
#53 0x08077470 in Dialog::qt_metacall (this=0xbf907d7c, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbf90685c) at ./dialog.moc:88
#54 0xb5f1780a in QMetaObject::metacall (object=0xbf907d7c, cl=6125, idx=83, argv=0xbf90685c) at kernel/qmetaobject.cpp:237
#55 0xb5f261db in QMetaObject::activate (sender=0x83b44b0, m=0x8101ca0, local_signal_index=4, argv=0x0) at kernel/qobject.cpp:3295
#56 0x0807fd99 in Page::leavePageNextOk (this=0x83b44b0) at ./page.moc:126
#57 0xb61d2c8e in KAssistantDialog::qt_metacall (this=0xbf907d7c, _c=QMetaObject::InvokeMetaMethod, _id=76, _a=0xbf9069ac) at ./kassistantdialog.moc:76
#58 0x0807740f in Dialog::qt_metacall (this=0xbf907d7c, _c=QMetaObject::InvokeMetaMethod, _id=76, _a=0xbf9069ac) at ./dialog.moc:77
#59 0xb5f1780a in QMetaObject::metacall (object=0xbf907d7c, cl=6125, idx=76, argv=0xbf9069ac) at kernel/qmetaobject.cpp:237
#60 0xb5f261db in QMetaObject::activate (sender=0xbf907d7c, m=0xb645e644, local_signal_index=5, argv=0x0) at kernel/qobject.cpp:3295
#61 0xb61e5ef7 in KDialog::user2Clicked (this=0xbf907d7c) at ./kdialog.moc:234
#62 0xb61e85b0 in KDialog::slotButtonClicked (this=0xbf907d7c, button=8192) at ../../kdeui/dialogs/kdialog.cpp:884
#63 0xb61ea569 in KDialog::qt_metacall (this=0xbf907d7c, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0xbf906c08) at ./kdialog.moc:190
#64 0xb62cf31a in KPageDialog::qt_metacall (this=0xbf907d7c, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbf906c08) at ./kpagedialog.moc:70
#65 0xb61d2c2a in KAssistantDialog::qt_metacall (this=0xbf907d7c, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbf906c08) at ./kassistantdialog.moc:70
#66 0x0807740f in Dialog::qt_metacall (this=0xbf907d7c, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbf906c08) at ./dialog.moc:77
#67 0xb5f1780a in QMetaObject::metacall (object=0xbf907d7c, cl=6125, idx=69, argv=0xbf906c08) at kernel/qmetaobject.cpp:237
#68 0xb5f261db in QMetaObject::activate (sender=0x82e1510, m=0xb6025278, local_signal_index=0, argv=0xbf906c08) at kernel/qobject.cpp:3295
#69 0xb5f2b5c3 in QSignalMapper::mapped (this=0x82e1510, _t1=8192) at .moc/release-shared/moc_qsignalmapper.cpp:101
#70 0xb5f2c83d in QSignalMapper::map (this=0x82e1510, sender=0x82e12c0) at kernel/qsignalmapper.cpp:266
#71 0xb5f2ca1e in QSignalMapper::map (this=0x82e1510) at kernel/qsignalmapper.cpp:257
#72 0xb5f2caeb in QSignalMapper::qt_metacall (this=0x82e1510, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbf906da8) at .moc/release-shared/moc_qsignalmapper.cpp:87
#73 0xb5f1780a in QMetaObject::metacall (object=0x82e1510, cl=6125, idx=8, argv=0xbf906da8) at kernel/qmetaobject.cpp:237
#74 0xb5f261db in QMetaObject::activate (sender=0x82e12c0, m=0xb6f4a604, local_signal_index=2, argv=0xbf906da8) at kernel/qobject.cpp:3295
#75 0xb6d3af69 in QAbstractButton::clicked (this=0x82e12c0, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#76 0xb6a18489 in QAbstractButtonPrivate::emitClicked (this=0x82e5908) at widgets/qabstractbutton.cpp:546
#77 0xb6a192d4 in QAbstractButtonPrivate::click (this=0x82e5908) at widgets/qabstractbutton.cpp:539
#78 0xb6a1958e in QAbstractButton::mouseReleaseEvent (this=0x82e12c0, e=0xbf9075a4) at widgets/qabstractbutton.cpp:1121
#79 0xb666e7f8 in QWidget::event (this=0x82e12c0, event=0xbf9075a4) at kernel/qwidget.cpp:8044
#80 0xb6a1832e in QAbstractButton::event (this=0x82e12c0, e=0x6) at widgets/qabstractbutton.cpp:1080
#81 0xb6ac2cc2 in QPushButton::event (this=0x82e12c0, e=0xbf9075a4) at widgets/qpushbutton.cpp:679
#82 0xb66105cc in QApplicationPrivate::notify_helper (this=0x8235ad0, receiver=0x82e12c0, e=0xbf9075a4) at kernel/qapplication.cpp:4302
#83 0xb6617af7 in QApplication::notify (this=0xbf907dac, receiver=0x82e12c0, e=0xbf9075a4) at kernel/qapplication.cpp:3867
#84 0xb629828a in KApplication::notify (this=0xbf907dac, receiver=0x82e12c0, event=0xbf9075a4) at ../../kdeui/kernel/kapplication.cpp:310
#85 0xb5f1252b in QCoreApplication::notifyInternal (this=0xbf907dac, receiver=0x82e12c0, event=0xbf9075a4) at kernel/qcoreapplication.cpp:726
#86 0xb6616a52 in QCoreApplication::sendEvent (receiver=0x82e12c0, event=0xbf9075a4, alienWidget=0x82e12c0, nativeWidget=0xbf907d7c, buttonDown=0xb6f58998, lastMouseReceiver=..., spontaneous=true)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#87 QApplicationPrivate::sendMouseEvent (receiver=0x82e12c0, event=0xbf9075a4, alienWidget=0x82e12c0, nativeWidget=0xbf907d7c, buttonDown=0xb6f58998, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2967
#88 0xb66a1d7c in QETWidget::translateMouseEvent (this=0xbf907d7c, event=0xbf9079f0) at kernel/qapplication_x11.cpp:4380
#89 0xb66a128b in QApplication::x11ProcessEvent (this=0xbf907dac, event=0xbf9079f0) at kernel/qapplication_x11.cpp:3391
#90 0xb66cf3e2 in x11EventSourceDispatch (s=0x8238d40, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#91 0xb524e2f5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#92 0xb5251fd8 in ?? () from /lib/libglib-2.0.so.0
#93 0xb52521b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#94 0xb5f3e095 in QEventDispatcherGlib::processEvents (this=0x8220330, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#95 0xb66cef45 in QGuiEventDispatcherGlib::processEvents (this=0x8220330, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#96 0xb5f10b49 in QEventLoop::processEvents (this=0xbf907ce4, flags=) at kernel/qeventloop.cpp:149
#97 0xb5f10f9a in QEventLoop::exec (this=0xbf907ce4, flags=...) at kernel/qeventloop.cpp:201
#98 0xb5f161cf in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#99 0xb6610667 in QApplication::exec () at kernel/qapplication.cpp:3581
#100 0x0807661d in main (argc=3, argv=0xbf907f54) at ../../../runtime/accountwizard/main.cpp:69

Reported using DrKonqi
Comment 1 Andre Heinecke 2010-08-17 17:59:03 UTC
Created attachment 50660 [details]
Desktop Backtrace

This is also reproducable on the desktop
Comment 2 Andre Heinecke 2010-08-17 18:01:03 UTC
To reproduce this with the Desktop version (r1163254):
Use Tools -> Account Wizard
Enter required fields
Push Next
Select a Server (e.g Kolab Server)
Push Next
Push Back
Push Next
Comment 3 Volker Krause 2010-09-06 16:38:34 UTC
*** Bug 240182 has been marked as a duplicate of this bug. ***
Comment 4 Volker Krause 2010-09-07 11:45:36 UTC
SVN commit 1172451 by vkrause:

Fix going back after a wizard script has been started already and
starting it again (or even any other wizard). First, we cannot delete
Kross::Actions apparently, they in turn delete the exported objects,
which includes the entire application in our case. Second, we need to
remove dynamic pages created in previous runs, otherwise they will
show up first when moving forward again.

BUG: 247514


 M  +13 -7     dialog.cpp  
 M  +2 -0      dialog.h  
 M  +14 -3     loadpage.cpp  
 M  +5 -1      loadpage.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1172451
Comment 5 Volker Krause 2010-09-10 19:44:49 UTC
*** Bug 250754 has been marked as a duplicate of this bug. ***