Fix going back after a wizard script has been started already and starting it again (or even any other wizard). First, we cannot delete Kross::Actions apparently, they in turn delete the exported objects, which includes the entire application in our case. Second, we need to remove dynamic pages created in previous runs, otherwise they will show up first when moving forward again.

BUG: 247514

svn path=/trunk/KDE/kdepim/runtime/; revision=1172451